test/sema/conversion-to-bool-disallowed.delta
// RUN: %check_errors %not %delta -print-ir %s
// TODO: Make this test pass with -typecheck in place of -print-ir.

void main() {
    // CHECK: [[@LINE+1]]:18: error: conversion from 'int' to 'bool' not supported
    var b = bool(1);
}
